--- a/usb-fifo/nbproject/Makefile-genesis.properties
+++ b/usb-fifo/nbproject/Makefile-genesis.properties
@@ -1,8 +1,8 @@
 #
-#Sun Feb 12 00:56:42 EET 2012
-default.com-microchip-mplab-nbide-toolchainC18-C18LanguageToolchain.md5=5dd27d1801fe4e796444f557b887e0f8
+#Sat Apr 21 17:29:40 EEST 2012
+default.com-microchip-mplab-nbide-toolchainC18-C18LanguageToolchain.md5=fcfc632cf94e98821b85ab70862b4176
 default.languagetoolchain.dir=/opt/microchip/mplabc18/v3.40/bin
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=fb2cb59c6388ae2c771b1cd4c62bc949
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=3bef749a45e99e9fda706f0a9450af45
 default.languagetoolchain.version=3.40
 host.platform=linux
 conf.ids=default
